refactor(java): retire FileMetaDataLoader + loader/file/; migrate to unified MetaDataLoader factories
Deletes the entire com.metaobjects.loader.file package (FileMetaDataLoader,
FileMetaDataSources, LocalFileMetaDataSources, URIFileMetaDataSources,
FileLoaderOptions) and the old createFromURIs / createFromResources
aliases on MetaDataLoader.

All callsites — production (core-spring MetaDataLoaderConfiguration) and
tests (omdb, omdb-ktx, maven-plugin, codegen-mustache, metadata gson +
proxy tests) — migrate to MetaDataLoader.fromResources / fromUris.
Bundle-file XML loading in om/OMXMLTest is replaced with a stub @Ignore
test (the original Apple test data is already commented out).

CoreTypeInitializer drops the dead Class.forName(FileMetaDataLoader)
warm-up (FileMetaDataLoader had no static block to trigger).

LoaderOptions header doc updated to describe the unified loader, not
the old file-only loader.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>